[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
futures = "0.3"
lazy_static = "1.4.0"
error-chain  = "0.12.4"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]